<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tour de Garde</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="dateDebutText">Début de la garde :</string>
	<string name="dateFinText">Fin de la garde :</string>
	<string name="periodeText">Périodicité :</string>
	<string name="estPeriodeText">Est une période de garde :</string>
	<string name="nameText">Nom :</string>
	<string name="afficherPeriode">Est périodique ?</string>
	<string name="boutonAnnuler">Annuler</string>
	<string name="boutonSauver">Sauver</string>
	<string name="boutonSupprimer">Supprimer</string>
	
	<string name="oui">Oui</string>
	<string name="non">Non</string>
	<string name="nondefinie">Non définie</string>
	
	<string name="erreur_title">Erreurs</string>
	<string name="erreur_nom_vide">Le nom doit être renseigné</string>
	<string name="erreur_datedebut_vide">La date de début doit être renseignée</string>
	<string name="erreur_datefin_vide">La date de fin doit être renseignée</string>
	<string name="erreur_datefin_before">La date de fin doit être après la date de début</string>
	<string name="erreur_periode_vide">La periode doit être renseignée</string>
	
	<string name="confirme_title">Suppression</string>
	<string name="confirme_message">Voulez vous vraiment supprimer cette garde ?</string>

	<string name="ajout_garde_ok">La garde %1$s a été ajoutée</string>
	<string name="edit_garde_ok">La garde %1$s a été modifiée</string>
	<string name="delete_garde_ok">La garde %1$s a été supprimée</string>
	
	<string name="avec_periode">Avec période</string>	
	
	<string name="name_garde">(%1$s)</string>
</resources>
