<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Settings" >

    <LinearLayout
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0.00" 
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/dateDebutText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/dateDebutText"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/dateDebutBouton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textColor="#000000" 
            android:background="@drawable/rounded_button"
            android:textSize="30px"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.00" 
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/dateFinText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/dateFinText"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/dateFinBouton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textColor="#000000" 
            android:background="@drawable/rounded_button"
            android:textSize="30px"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.00" 
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/periodeText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/periodeText"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/periodeBouton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textColor="#000000" 
            android:background="@drawable/rounded_button"
            android:textSize="30px"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.00" 
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/estPeriodeText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/estPeriodeText"
            android:textColor="#FFFFFF" />

        <ToggleButton
            android:id="@+id/estPeriodeBouton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textOn="@string/oui" 
            android:textOff="@string/non" />
       
    </LinearLayout>

</LinearLayout>